# amazonka

core/src/Network/AWS/: Error.hs
gen2/: Makefile  amazonka-gen.cabal  macosx-install-text-icu  test.hs
gen2/src/: Main.hs
gen2/template/: cabal.ede  types.ede
gen2/template/_include/: product.ede  sum.ede
