name:                  amazonka-gen
version:               0.3.0
synopsis:              Amazonka Generator
homepage:              https://github.com/brendanhay/amazonka
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2015 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Generator for Amazonka related AWS SDKs

executable amazonka-gen
    default-language:  Haskell2010
    hs-source-dirs:    src
    main-is:           Main.hs

    other-modules:
          Khan.Gen.IO
        , Khan.Gen.JSON
        , Khan.Gen.Model
        , Khan.Gen.Model.Endpoint
        , Khan.Gen.Model.Index
        , Khan.Gen.Model.Paginator
        , Khan.Gen.Model.Retrier
        , Khan.Gen.Model.URI
        , Khan.Gen.Model.Waiter
        , Khan.Gen.TH
        , Khan.Gen.Text
        , Khan.Gen.Types

    ghc-options:       -Wall -threaded

    build-depends:
          aeson
        , aeson-pretty
        , attoparsec
        , base                 == 4.7.*
        , bifunctors
        , bytestring
        , case-insensitive
        , directory
        , ede                  == 0.2.4.*
        , errors
        , filepath
        , hashable
        , jason
        , lens                 == 4.5.*
        , mtl
        , optparse-applicative == 0.11.*
        , parsec
        , scientific
        , semver
        , tagsoup
        , template-haskell
        , text
        , text-manipulate
        , text-icu
        , text-regex-replace   == 0.1.*
        , transformers
        , unordered-containers
        , vector
        , system-filepath
        , system-fileio
